[tool.poetry]
name = "stigma_iv"
version = "0.0.1"
description = "Tree X LinearRegression Collab Examination: I"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "stigma_iv"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"